# framework

./: .gitignore  CMakeLists.txt  arm.cmake
release/lib/: libdd_daeinterface.so.1  libdd_daeinterface.so.1.1
sdk/include/: dandan.h
sdk/include/kernel/: dd_app.h  dd_mediadevice.h  dd_process.h  dd_thread.h  dd_timer.h
sdk/include/service/: dd_command.h  dd_device.h  dd_devsrvmanager.h  dd_service.h
sdk/include/type/: dd_type.h
sdk/include/utility/: dd_character.h  dd_filemanager.h  dd_log.h  dd_mediaplayer.h  dd_playlist.h  dd_regular.h
sdk/lib/: libdandan.so.1.1
src/daemon/: CMakeLists.txt
src/daemon/dae/: CMakeLists.txt
src/daemon/dae/devices/: CMakeLists.txt  dddae_app.cpp  dddae_app.h  dddae_device.h  dddae_main.cpp  dddae_music_device.cpp  dddae_music_device.h  stdafx.h
src/daemon/dae/interfaces/: CMakeLists.txt  dddae_interface.h  dddae_music_interface.cpp  dddae_music_interface.h
src/daemon/mediaplayer/: CMakeLists.txt  ddmediaplayer_app.cpp  ddmediaplayer_app.h  ddmediaplayer_gstreamer.cpp  ddmediaplayer_gstreamer.h  ddmediaplayer_main.cpp  stdafx.h
src/launcher/: CMakeLists.txt  ddlauncher_app.cpp  ddlauncher_app.h  ddlauncher_main.cpp  stdafx.h
