AUX_SOURCE_DIRECTORY(. SRCS)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sdk/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/sdk/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/release/lib)

ADD_EXECUTABLE(launcher ${SRCS})
SET_TARGET_PROPERTIES(launcher PROPERTIES OUTPUT_NAME "dd_launcher")

TARGET_LINK_LIBRARIES(launcher dandan)
TARGET_LINK_LIBRARIES(launcher dd_daeinterface)

# 设置输出目录
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/release/bin)
