AUX_SOURCE_DIRECTORY(. SRCS)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sdk/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/sdk/lib)
# 生成lib
ADD_LIBRARY(dae_interface SHARED ${SRCS})
SET_TARGET_PROPERTIES(dae_interface PROPERTIES OUTPUT_NAME "dd_daeinterface")

TARGET_LINK_LIBRARIES(dae_interface dandan)

# 设置动态库的版本号
SET_TARGET_PROPERTIES(dae_interface PROPERTIES VERSION 1.1 SOVERSION 1)

# 设置输出目录
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/release/lib)
